[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
roxmltree = "*"
tempfile = "*"
sha256 = "*"
inline_colorization = "*"
zip = "*"
futures = "*"
ron = "*"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]
[dependencies.tokio-macros]
version = "2.4.0"
[dependencies.tokio-util]
version = "0.7.11"
features = ["compat"]
